--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./../css/index.css">
 </head>
 <body>
-    
-    <h1>Hosted</h1>
+    <div>
+        <button onclick="login()">Login</button>
+        <button onclick="signup()">Signup</button>
+    </div>
+
+    <script src="./../js/index.js"></script>
 </body>
 </html>
