--- a/html/start.html
+++ b/html/start.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./../css/start.css">
 </head>
 <body>
     <div>
-        <button onclick="login()">Login</button>
-        <button onclick="signup()">Signup</button>
+        <button onclick="loc()">start</button>
+        <button onclick="logout()">Logout</button>
     </div>
 
-    <script src="./js/index.js"></script>
+    <script src="./../js/start.js"></script>
 </body>
 </html>
