--- a/html/location.html
+++ b/html/location.html
@@ -20,7 +20,7 @@
         var n = document.querySelector(".name-list");
         var d = document.querySelector(".map-container");
 
-        fetch("http://localhost:5000/", 
+        fetch("https://swiggytrackingsystem.herokuapp.com/", 
         {
             method: 'GET',
             mode: 'cors', 
